--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,13 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_11
     }
+
+    androidResources {
+        noCompress 'tflite'
+    }
 }
+
+project.ext.ASSET_DIR = projectDir.toString() + '/src/main/assets'
 
 dependencies {
 
@@ -60,4 +66,10 @@ dependencies {
     def glide_version = "4.14.1"
     implementation "com.github.bumptech.glide:glide:${glide_version}"
     annotationProcessor "com.github.bumptech.glide:compiler:${glide_version}"
+
+    // TensorFlow lite
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.0'
+    // Import the GPU delegate plugin Library for GPU inference
+    implementation 'org.tensorflow:tensorflow-lite-gpu-delegate-plugin:0.4.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.9.0'
 }
